--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ exclude = [
 default = ["hut"]
 hut = [ "dep:hut" ]
 
+
 [dependencies]
-thiserror = "1.0.58"
+thiserror-no-std="2.0.2"
 hut = { version = "0.3.0", optional = true }
